karmada-test-case/httproute.old.yaml
apiVersion: policy.linkerd.io/v1beta2
kind: HTTPRoute
metadata:
  name: nginx-route
spec:
  parentRefs:
    - name: nginx
      kind: Service
      group: core
      port: 80
  rules:
    - backendRefs:
      - name: nginx
        port: 80
        weight: 50
      - name: nginx-desktop
        port: 80
        weight: 50
